# pepper_ik_calculator

./: README.md
pepper_ik_calculator/: CMakeLists.txt  package.xml
pepper_ik_calculator/src/: ik_calculator.cpp
pepper_moveit_config_modified/: .setup_assistant  CMakeLists.txt  package.xml
pepper_moveit_config_modified/config/: JulietteY20MP.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
pepper_moveit_config_modified/launch/: JulietteY20MP_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
