<?xml version="1.0"?>
<package format="2">
  <name>pepper_ik_calculator</name>
  <version>0.0.0</version>
  <description>The pepper_ik_calculator package</description>

  <maintainer email="houman@todo.todo">houman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <build_depend>pepper_description</build_depend>
  <exec_depend>pepper_description</exec_depend>
  <build_export_depend>pepper_description</build_export_depend>

  <build_depend>moveit_core</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <build_export_depend>moveit_core</build_export_depend>

  <build_depend>moveit_ros_planning</build_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
